--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -64,7 +64,7 @@ footer {
             letter-spacing: $letter-spaceOne;
             // height: 100%;
             width: auto;  
-            padding: 1rem 0 2rem 0;
+            padding: .5rem 0 2.5rem 0;
         }
     
         .footer-link {
