--- a/scss/_herosection.scss
+++ b/scss/_herosection.scss
@@ -24,6 +24,7 @@
                 font-family: $font-familyThree;
                 letter-spacing: $letter-spaceTwo;
                 font-size: $fontSize-four;           
+                
             }
 
             .hero-right {
@@ -34,6 +35,17 @@
                     padding: 0 1rem;
                     cursor: pointer;
                 }
+
+                @include mobile {
+                    display: none;
+                }
+            }
+
+            @include mobile {
+                display: flex;
+                justify-content: center;
+                padding: 1rem 0;
+                margin: 0;
             }
         }
 
@@ -64,7 +76,54 @@
                 img {
                     height: auto;
                     width: 100%; 
+
+                    @include mobile {
+                        display: none;
+                    }
                 }   
+
+                .hero-mobile {
+                    display: none;
+
+                    img {
+                        display: block;
+                        height: auto;
+                        width: 125px;
+                        margin-bottom: 8px;
+                    }
+
+                    @include mobile {
+                        display: flex;
+                        justify-content: space-between;
+                        
+                        .hero-mobile-info {
+                            width: 100%;
+                            padding-top: 8px;
+                            padding-left: 12px;
+                            text-align: left;
+                        }
+
+                        .hero-mobile-name {
+                            letter-spacing: $letter-spaceTwo;
+                            font-size: $fontSize-four;
+                            font-family: $font-familyThree;
+                            text-transform: uppercase;
+                            font-weight: bold;
+                        }
+
+                        .hero-mobile-tour {
+                            letter-spacing: $letter-spaceOne;
+                            font-family: $font-familyTwo;
+                            font-size: $fontSize-five;
+                            color: $color-two;
+                            font-weight: bold;
+                            font-style: italic;
+
+                        }
+
+                    }
+
+                }
 
                 .hero-event {
                     height: auto;
@@ -102,6 +161,35 @@
                     padding: 2rem;
                     width: 100%;
 
+                    // Mobile view styles only
+                    .hero-buy {
+                        display: none;
+
+                        @include mobile {
+                            display: block;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 25px;
+
+                            i {
+                                display: block;
+                                color: $color-one;
+                            }
+
+                            .hero-ticket {
+                                display: block;
+                                color: $color-one;
+                                font-size: $fontSize-two;
+                                font-family: $font-familyThree;
+                                text-transform: uppercase;
+                                letter-spacing: $letter-spaceOne;
+                            }
+                        }
+                    }
+
+                    // End mobile view styles
+
                     .hero-name {
                         font-size: 30px;
                         height: auto;
@@ -110,6 +198,10 @@
                         padding-bottom: 4px;
                         font-weight: 600;
                         text-transform: uppercase;
+
+                        @include mobile {
+                            display: none;
+                        }
                     }
 
                     .hero-tour {
@@ -121,12 +213,37 @@
                         color: $color-two;
                         letter-spacing: $letter-spaceOne;
                         font-weight: 600;
+
+                        @include mobile {
+                            display: none;
+                        }
+                    }
+
+                    @include mobile {
+                        padding: 1rem;
+                        height: auto;
+                        background-color: $color-three;
                     }
                 }  
+
+                @include mobile {
+                    width: 100%;
+                    height: auto;
+                    margin-bottom: 2rem;
+                    background-color: $color-one;
+                }
             }
+
+        }
+
+        @include mobile {
+            padding: 0 4px;
+            margin: 0 12px;
+            width: auto;
         }
     }
 }
+
 
 
 // overlay css 
