--- a/scss/style.css
+++ b/scss/style.css
@@ -255,7 +255,7 @@ footer .footer-container .footer-info {
   flex-direction: column;
   margin: 1rem;
 }
-footer .footer-container .footer-info .footer-signup {
+footer .footer-container .footer-signup {
   color: #fff;
   text-transform: uppercase;
   font-family: "Oswald", sans-serif;
@@ -265,10 +265,10 @@ footer .footer-container .footer-info .footer-signup {
   width: 100%;
   text-align: center;
 }
-footer .footer-container .footer-info .footer-signup h1 {
+footer .footer-container .footer-signup h1 {
   width: 100%;
 }
-footer .footer-container .footer-info .footer-update {
+footer .footer-container .footer-update {
   font-size: 20px;
   font-style: italic;
   font-family: "Merriweather", serif;
@@ -276,27 +276,66 @@ footer .footer-container .footer-info .footer-update {
   width: auto;
   padding: 0.5rem 0 2.5rem 0;
 }
-footer .footer-container .footer-info .footer-link {
+footer .footer-container .footer-link {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
   display: flex;
   justify-content: center;
 }
-footer .footer-container .footer-info .footer-link a {
+footer .footer-container .footer-link a {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
   letter-spacing: 1.4px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   padding: 0.5rem 5rem;
   transition: all 0.3s ease-in-out;
 }
-footer .footer-container .footer-info .footer-link a:hover {
+footer .footer-container .footer-link a:hover {
   background-color: #fff;
   color: #000;
   transition: all 0.3s ease-in;
   transform: scale(1.1);
+}
+@media screen and (max-width: 600px) {
+  footer .footer-container {
+    height: 100%;
+    overflow: hidden;
+  }
+  footer .footer-container img {
+    transform: scale(1.4);
+    width: 700px;
+    height: 100%;
+  }
+  footer .footer-container .footer-newsletter {
+    width: 450px;
+    height: 350px;
+  }
+  footer .footer-container .footer-info {
+    width: 450px;
+    height: 350px;
+    padding: 1rem;
+    gap: 10px;
+  }
+  footer .footer-container .footer-info .footer-signup {
+    font-size: 24px;
+    line-height: 50px;
+  }
+  footer .footer-container .footer-info .footer-update {
+    text-align: center;
+    font-size: 24px;
+    padding-bottom: 1rem;
+  }
+  footer .footer-container .footer-info a {
+    padding: 0.5rem 7.5rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  footer {
+    height: 550px;
+    padding: 1rem 0 2.5rem 0;
+  }
 }
 
 *, *::before, *::after {
@@ -467,8 +506,23 @@ body .navbar-two div ul a:hover {
     display: none;
   }
 }
+body .navbar-two div .navbar-bars {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  body .navbar-two div .navbar-bars {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #000;
+  }
+}
 @media screen and (max-width: 600px) {
   body .navbar-two div {
     margin-left: 8px;
+  }
+}
+@media screen and (max-width: 600px) {
+  body .navbar-two {
+    height: 100px;
   }
 }/*# sourceMappingURL=style.css.map */
