--- a/scss/style.scss
+++ b/scss/style.scss
@@ -197,16 +197,26 @@ body {
                 }
             }
 
+            .navbar-bars {
+                display: none;
+
+                @include mobile {
+                    display: flex;
+                    justify-content: flex-end;
+                    background-color: $color-two;
+
+                }
+            }
+
             @include mobile {
                 margin-left: 8px;
             }
             
         }
 
-        // @include mobile {
-        //     height: auto;
-        // }
-        
+        @include mobile {
+            height: 100px;
+        } 
     }
     
     
