--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,10 @@ body {
                 padding: 0 8px;
                 list-style-type: none;
                 transition: all 0.3s ease-in;
+
+                @include pt-tablet {
+                    display: none;
+                }
             }
 
             .navbar-header {
@@ -82,6 +86,10 @@ body {
             div {
                 position: absolute;
                 right: 5%;
+            }
+
+            @include pt-tablet {
+                display: none;
             }
         }
 
@@ -202,6 +210,10 @@ body {
                 }
 
                 @include mobile {
+                    display: none;
+                }
+
+                @include pt-tablet {
                     display: none;
                 }
             }
